# emo-llm

./: Plotters_1.ipynb  Plotters_2.ipynb  Plotters_3.ipynb  Plotters_4.ipynb  README.md  main.py  models_summary.py  my_sankey.py  plotters_utils.py  prompt_manager.py  pyproject.toml  requirements.txt  utils.py
LLMs/: configuration_openelm.py  my_gemma2.py  my_llama.py  my_mistral.py  my_olmo.py  my_olmo2.py  my_openelm.py  my_phi3.py
